--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "noroutine",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "author": "Timur Shemsedinov <timur.shemsedinov@gmail.com>",
   "license": "MIT",
   "description": "Goroutine analogue for Node.js, spreads I/O-bound routine (tasks) to utilize thread pool with `worker_threads` using balancer with event loop utilization.",
@@ -43,15 +43,15 @@
     "fmt": "prettier --write \"**/*.js\" \"**/*.json\" \"**/*.md\" \"**/.*rc\" \"**/*.ts\""
   },
   "devDependencies": {
-    "@types/node": "^16.10.3",
+    "@types/node": "^16.11.6",
     "eslint": "^7.32.0",
     "eslint-config-metarhia": "^7.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-prettier": "^4.0.0",
     "metatests": "^0.7.2",
+    "metautil": "^3.5.16",
     "prettier": "^2.4.1",
-    "typescript": "^4.4.3",
-    "metautil": "^3.5.16"
+    "typescript": "^4.4.3"
   }
 }
