Add node.js 19 and 20 to CI
PR-URL: https://github.com/metarhia/noroutine/pull/32

--- a/package.json
+++ b/package.json
@@ -16,12 +16,9 @@
   ],
   "main": "noroutine.js",
   "types": "noroutine.d.ts",
-  "files": [
-    "lib/",
-    "noroutine.d.ts"
-  ],
+  "files": ["lib/", "noroutine.d.ts"],
   "engines": {
-    "node": "^12.22 || ^14.17 || 16 || 18"
+    "node": "^12.22 || ^14.17 || 16 || 18 || 19 || 20"
   },
   "repository": {
     "type": "git",
