Drop node.js 12.x support

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "types": "noroutine.d.ts",
   "files": ["lib/", "noroutine.d.ts"],
   "engines": {
-    "node": "^12.22 || ^14.17 || 16 || 18 || 19 || 20"
+    "node": "^14.17 || 16 || 18 || 19 || 20"
   },
   "repository": {
     "type": "git",
